# bucket

./: .env.example  .gitignore  Dockerfile  README-github-actions.md  README.md  RSS_USAGE.md  bucket.db  bucket.service  docker-compose.yml  example.py  generate_pdf_newsletter.py  index.html  minimal_test.py  notes_2025-09-06.md  pyproject.toml  setup_daily_cleanup.py  simple_test.py  test_bucket.py  update_feeds.py
.github/workflows/: cleanup-duplicates.yml  content-processor.yml  discord-webhook.yml  newsletter-generator.yml  rss-crawler.yml
bucket/: __init__.py  api.py  cli.py  config.py  core.py  database.py  discord_bot.py  discord_bot_backup.py  discord_bot_fixed.py  fetcher.py  hugo_integration.py  models.py  pdf_generator.py  rss_manager.py  rss_scheduler.py  summarizer.py
bucket/examples/: rss_example.py
data/: articles.json  feeds.json
outputs/api/: latest-newsletter.json  processing-queue.json  recent-articles.json  rss-stats.json
outputs/newsletters/: newsletter-2025-09-07.json  newsletter-2025-09-15.json  newsletter-2025-10-02.json  newsletter-2025-10-12.json  newsletter-2025-10-13.json  newsletter-2025-10-16.json  newsletter-2025-10-17.json  newsletter-2025-10-18.json  newsletter-2025-10-20.json  newsletter-2025-10-21.json  newsletter-2025-10-31.json  newsletter-2025-11-01.json  newsletter-2025-11-10.json  newsletter-2026-01-29.json  newsletter-2026-02-01.json  newsletter-2026-02-08.json  newsletter-2026-02-10.json  newsletter-2026-02-13.json  newsletter-2026-02-17.json  newsletter-2026-02-19.json  newsletter-2026-02-24.json  newsletter-2026-02-26.json  newsletter-2026-03-01.json  newsletter-2026-03-04.json  newsletter-2026-03-09.json  newsletter-2026-03-12.json  newsletter-2026-03-13.json  newsletter-2026-03-14.json  (+102 more)
scripts/: discord-webhook-sender.py  run_duplicate_cleanup.py
templates/: briefing.html  newsletter.html
(+1 files in other folders)
